added Details view

--- a/RestaurantRater/Views/Restaurant/Index.cshtml
+++ b/RestaurantRater/Views/Restaurant/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model IEnumerable<RestaurantRater.Models.Restaurant>
+﻿@model IEnumerable<RestaurantRater.Models.Restaurant>
 
 @{
     ViewBag.Title = "Index";
