--- a/RestaurantRater/Views/Restaurant/Details.cshtml
+++ b/RestaurantRater/Views/Restaurant/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model RestaurantRater.Models.Restaurant
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Restaurant</h4>
     <hr />
@@ -14,29 +13,30 @@
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
+
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Address)
         </dt>
+
         <dd>
             @Html.DisplayFor(model => model.Address)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Rating)
         </dt>
+
         <dd>
             @Html.DisplayFor(model => model.Rating)
         </dd>
-    </dl>
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" />
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+    </dl>
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.RestaurantID }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
